--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.5.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.14.1",
+    "nodejs": "^0.0.0",
+    "react": "^19.1.0",
+    "ts-node-dev": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.0.3",
     "express": "^5.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
