--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
@@ -24,6 +26,7 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
     "express": "^5.1.0",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
