--- a/package.json
+++ b/package.json
@@ -2,25 +2,18 @@
   "name": "saai-bd",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "app.ts",
   "scripts": {
-<<<<<<< Updated upstream
-    "test": "echo \"Error: no test specified\" && exit 1"
-=======
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/app.ts",
     "build": "tsc",
-    "serve": "node dist/index.js"
->>>>>>> Stashed changes
+    "serve": "node dist/index.js",
+    "dev": "ts-node-dev src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-<<<<<<< Updated upstream
-    "express": "^5.1.0"
-=======
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
@@ -37,6 +30,5 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
->>>>>>> Stashed changes
   }
 }
