--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
@@ -24,8 +25,9 @@
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.0.10",
     "express": "^5.1.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
