--- a/backend/package.json
+++ b/backend/package.json
@@ -22,12 +22,16 @@
     "mysql2": "^3.14.1",
     "nodejs": "^0.0.0",
     "react": "^19.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.10",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "express": "^5.1.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
