--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "multer": "^2.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "nodejs": "^0.0.0",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.0.10",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
